--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "scripts": {
     "start": "node server.js"
   },
+  "main":"server.js",
+  "engines": {
+    "node": "6.7.0"
+  },
   "dependencies": {
     "bcrypt": "^0.8.7",
     "body-parser": "~1.15.1",
@@ -18,7 +22,6 @@
     "serve-favicon": "~2.3.0"
   },
   "description": "aula de nuvem pós",
-  "main": "server.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/johanpedroo/aula-nuvem.git"
