--- a/package.json
+++ b/package.json
@@ -15,10 +15,6 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.14.0",
-    "express-jwt": "^5.0.0",
-    "jsonwebtoken": "^7.1.9",
-    "mongoose": "^4.5.10",
-    "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0"
   },
   "description": "aula de nuvem pós",
@@ -33,6 +29,7 @@
   },
   "homepage": "https://github.com/johanpedroo/aula-nuvem#readme",
   "devDependencies": {
-    "mocha": "^3.1.0"
+    "mocha": "^3.1.0",
+    "morgan": "~1.7.0"
   }
 }
