--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node server.js"
   },
-  "main":"server.js",
+  "main": "server.js",
   "engines": {
     "node": "6.7.0"
   },
@@ -14,6 +14,10 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.14.0",
+    "mongoose": "^4.6.4",
+    "pg": "^6.1.0",
+    "pg-hstore": "^2.3.2",
+    "sequelize-cli": "^2.4.0",
     "serve-favicon": "~2.3.0"
   },
   "description": "aula de nuvem pós",
